; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/wrappers/extr__libc_funcptr.c_voucher_mach_msg_revert.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/wrappers/extr__libc_funcptr.c_voucher_mach_msg_revert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { void (i32)* }

@_libkernel_voucher_functions = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @voucher_mach_msg_revert(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load %struct.TYPE_2__*, %struct.TYPE_2__** @_libkernel_voucher_functions, align 8
  %4 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 0
  %5 = load void (i32)*, void (i32)** %4, align 8
  %6 = icmp ne void (i32)* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @_libkernel_voucher_functions, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load void (i32)*, void (i32)** %9, align 8
  %11 = load i32, i32* %2, align 4
  call void %10(i32 %11)
  br label %12

12:                                               ; preds = %7, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
